--- a/Andr.Unit/Andr.Unit.csproj
+++ b/Andr.Unit/Andr.Unit.csproj
@@ -16,6 +16,7 @@
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AssemblyName>Andr.Unit</AssemblyName>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
+    <TargetFrameworkVersion>v2.3</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -116,9 +117,17 @@
       <Project>{6A005891-A3D6-4398-A729-F645397D573A}</Project>
       <Name>Android.NUnitLite</Name>
     </ProjectReference>
-    <ProjectReference Include="..\m4a.tests\m4a.tests.csproj">
-      <Project>{06D00E82-E637-4A8A-95BE-3E1ADE925B9B}</Project>
-      <Name>m4a.tests</Name>
+    <ProjectReference Include="..\..\TimeInc.SwimSuit2012.Services.Android.Test\TimeInc.SwimSuit2012.Services.Android.Test.csproj">
+      <Project>{9E5C76CF-0C98-4921-A865-A7F8A3268282}</Project>
+      <Name>TimeInc.SwimSuit2012.Services.Android.Test</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="..\..\..\..\Android\TimeInc.SwimSuit2012.View.Android\Assets\swimsuitIssue.json">
+      <Link>Assets\swimsuitIssue.json</Link>
+    </AndroidAsset>
+    <AndroidAsset Include="Resources\drawable\Icon.png">
+      <Link>Assets\Icon.png</Link>
+    </AndroidAsset>
   </ItemGroup>
 </Project>
